--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
+    "google-auth-library": "^10.5.0",
     "nestjs-zod": "^5.1.1",
     "pg": "^8.17.1",
     "reflect-metadata": "^0.2.2",
